--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Flux • TodoMVC</title>
+    <title>CPF / CNPF Registry</title>
     <link rel="stylesheet" href="todomvc-common/base.css">
   </head>
   <body>
     <section id="todoapp"></section>
     <footer id="info">
-      <p>Double-click to edit a todo</p>
+      <p>Double-click to edit a XXXX</p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
     <script src="./bundle.js"></script>
