--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="todomvc-common/base.css">
   </head>
   <body>
-    <section id="todoapp"></section>
+    <section id="cpfapp"></section>
     <footer id="info">
       <p>Double-click to edit a XXXX</p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
