Occurrences of todo renamed to cpf

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>CPF / CNPF Registry</title>
-    <link rel="stylesheet" href="todomvc-common/base.css">
+    <link rel="stylesheet" href="common/base.css">
   </head>
   <body>
     <section id="cpfapp"></section>
     <footer id="info">
-      <p>Double-click to edit a XXXX</p>
-      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+      <p>Double-click to edit a cpf</p>
+      <p>Based on <a href="https://github.com/facebook/flux/tree/master/examples/flux-todomvc">Flux-TodoMVC</a></p>
     </footer>
     <script src="./bundle.js"></script>
   </body>
